# h5wasm-plugins

BZIP2/: CMakeLists.txt  H5Zbzip2.c  H5Zbzip2.h  bz2_h5filter.h
HDF5Plugin-Zstandard/: CMakeLists.txt  zstd_h5plugin.h
LZ4/: CMakeLists.txt  H5Zlz4.c
